test/fails/bad_functions/return_type2.lgl
int f() {
    return true;
}

void main() {
    return;
}